# Accounting

./: .clang-format  CMakeLists.txt  README.md  cleaning-script.ps1
src/: source.cpp
src/common/: aliases.h  common.cpp  common.h  cpp_version.h  date_time.h  enums.h  log_scope.cpp  logger.cpp  logging.h  math.h  strings.h  time.h
src/entities/: account.cpp  account.h  transfer.cpp  transfer.h  transfer_state_switch.cpp  transfer_state_switch.h
src/files/: file.h
src/interface/: cli.cpp  cli.h
src/repository/: app_repository_interface.h  file_repository.cpp  file_repository.h
src/serialization/: json_serializers.cpp  json_serializers.h
